// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAccordionItemState(BpkAccordionItem) should render correctly 1`] = `
<div
  id="my-accordion"
>
  <dt
    aria-labelledby="my-accordion"
    aria-level="3"
    className="bpk-accordion__title"
  >
    <button
      aria-controls="my-accordion_content"
      aria-expanded={false}
      className="bpk-accordion__toggle-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="bpk-accordion__flex-container"
      >
        <span
          className="bpk-text bpk-text--base bpk-accordion__title-text"
        >
          My accordion item
        </span>
        <span
          className="bpk-accordion__icon-wrapper"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-accordion__item-expand-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
  </dt>
  <dd
    aria-labelledby="my-accordion_content"
    className="bpk-accordion__content-container"
    id="my-accordion_content"
  >
    <div
      onTransitionEnd={[Function]}
      style={
        Object {
          "MozTransition": "height 200ms ease ",
          "OTransition": "height 200ms ease ",
          "WebkitTransition": "height 200ms ease ",
          "height": 0,
          "msTransition": "height 200ms ease ",
          "overflow": "hidden",
          "transition": "height 200ms ease ",
        }
      }
    >
      <div>
        My accordion content
      </div>
    </div>
  </dd>
</div>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "expanded" prop 1`] = `
<div
  id="my-accordion"
>
  <dt
    aria-labelledby="my-accordion"
    aria-level="3"
    className="bpk-accordion__title"
  >
    <button
      aria-controls="my-accordion_content"
      aria-expanded={false}
      className="bpk-accordion__toggle-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="bpk-accordion__flex-container"
      >
        <span
          className="bpk-text bpk-text--base bpk-accordion__title-text"
        >
          My accordion item
        </span>
        <span
          className="bpk-accordion__icon-wrapper"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-accordion__item-expand-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
  </dt>
  <dd
    aria-labelledby="my-accordion_content"
    className="bpk-accordion__content-container"
    id="my-accordion_content"
  >
    <div
      onTransitionEnd={[Function]}
      style={
        Object {
          "MozTransition": "height 200ms ease ",
          "OTransition": "height 200ms ease ",
          "WebkitTransition": "height 200ms ease ",
          "height": 0,
          "msTransition": "height 200ms ease ",
          "overflow": "hidden",
          "transition": "height 200ms ease ",
        }
      }
    >
      <div>
        My accordion content
      </div>
    </div>
  </dd>
</div>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "initiallyExpanded" prop 1`] = `
<div
  id="my-accordion"
>
  <dt
    aria-labelledby="my-accordion"
    aria-level="3"
    className="bpk-accordion__title"
  >
    <button
      aria-controls="my-accordion_content"
      aria-expanded={true}
      className="bpk-accordion__toggle-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="bpk-accordion__flex-container"
      >
        <span
          className="bpk-text bpk-text--base bpk-accordion__title-text"
        >
          My accordion item
        </span>
        <span
          className="bpk-accordion__icon-wrapper"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-accordion__item-expand-icon bpk-accordion__item-expand-icon--flipped"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
  </dt>
  <dd
    aria-labelledby="my-accordion_content"
    className="bpk-accordion__content-container"
    id="my-accordion_content"
  >
    <div
      onTransitionEnd={[Function]}
      style={
        Object {
          "MozTransition": "height 200ms ease ",
          "OTransition": "height 200ms ease ",
          "WebkitTransition": "height 200ms ease ",
          "height": "auto",
          "msTransition": "height 200ms ease ",
          "overflow": "visible",
          "transition": "height 200ms ease ",
        }
      }
    >
      <div>
        My accordion content
      </div>
    </div>
  </dd>
</div>
`;
